# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compte-rendu.typ  main.cpp
TextEditor/: .gitignore  CMakeLists.txt  main.cpp
TextEditor/src/Client/: Client.cpp  Client.h
TextEditor/src/Command/: Command.h
TextEditor/src/Command/CopyCommand/: CopyCommand.cpp  CopyCommand.h
TextEditor/src/Command/CutCommand/: CutCommand.cpp  CutCommand.h
TextEditor/src/Command/DeleteTextCommand/: DeleteTextCommand.cpp  DeleteTextCommand.h
TextEditor/src/Command/EnterCharCommand/: EnterCharCommand.cpp  EnterCharCommand.h
TextEditor/src/Command/MoveCursorCommand/: MoveCursorCommand.cpp  MoveCursorCommand.h
TextEditor/src/Command/PasteCommand/: PasteCommand.cpp  PasteCommand.h
TextEditor/src/Command/RedoCommand/: RedoCommand.cpp  RedoCommand.h
TextEditor/src/Command/UndoCommand/: UndoCommand.cpp  UndoCommand.h
TextEditor/src/Command/ZoomEditorCommand/: ZoomEditorCommand.cpp  ZoomEditorCommand.h
TextEditor/src/Renderer/: Renderer.cpp  Renderer.h
TextEditor/src/Snapshot/: Snapshot.h
TextEditor/src/TextEditor/: TextEditor.cpp  TextEditor.h
TextEditor/src/Texture/: Texture.cpp  Texture.h
TextEditor/tests/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  tools.cpp  tools.h
V1/conception/cas-utilisation/: class.puml  usecase.puml
V1/conception/diagramme-classes/: class.puml
V1/conception/diagramme-sequence/sequence-couper/: couper.puml
V1/conception/diagramme-sequence/sequence-ecrire/: ecrire.puml
V2/conception/cas-utilisation/: usecase.puml
compte-rendu/: compte-rendu.typ
img/V1/diagramme-sequence/diagramme-sequence-ecrire/: diagramme-sequence-ecrire.puml
img/V2/cas-utilisation/: cas-utilisation.puml
resources/V1/cas-utilisation/: cas-utilisation.puml
resources/V1/diagramme-classes/: diagramme-classes.puml
resources/V1/diagramme-sequence/diagramme-sequence-couper/: diagramme-sequence-couper.puml
resources/V2/cas-utilisation/: cas-utilisation.puml
resources/V2/diagramme-classes/: diagramme-classes.puml
resources/V2/diagramme-sequence/diagramme-sequence-ecoute/: diagramme-sequence-ecoute.puml
resources/V2/diagramme-sequence/diagramme-sequence-faire_defaire/: diagramme-sequence-faire_defaire.puml
resources/V2/diagramme-sequence/diagramme-sequence-reexecution/: diagramme-sequence-reexecution.puml
src/Client/: Client.cpp
src/Command/: Command.h
src/Command/CopyCommand/: CopyCommand.h
src/Command/DeleteTextCommand/: DeleteTextCommand.cpp
src/Command/EnterCharCommand/: EnterCharCommand.h
src/Command/MoveCursorCommand/: MoveCursorCommand.cpp  MoveCursorCommand.h
src/Command/PasteCommand/: PasteCommand.cpp  PasteCommand.h
src/Command/RedoCommand/: RedoCommand.cpp
src/Command/ZoomEditorCommand/: ZoomEditorCommand.cpp  ZoomEditorCommand.h
src/Debug/: Debug.cpp  Debug.h
src/Renderer/: Renderer.cpp  Renderer.h
src/Snapshot/: Snapshot.cpp
src/TextEditor/: TextEditor.cpp  TextEditor.h
src/Texture/: Texture.cpp
tests/: test1.cpp  test2.cpp
